Updated to Bitcoin 1.0.13

--- a/config/bitcoin.conf
+++ b/config/bitcoin.conf
@@ -7,6 +7,7 @@ txindex=1
 dnsseed=0
 upnp=0
 usecashaddr=0
+debug=1
 
 #Bind to given address to listen for JSON-RPC connections. Use
 #[host]:port notation for IPv6. This option can be specified
@@ -133,3 +134,5 @@ zmqpubrawtx=tcp://*:28332
 
 #Use genesis rules from the 1st block instead of waiting until 10,000 (default) blocks to activate genesis rules.
 genesisactivationheight=1
+
+minminingtxfee=0.0000005
