--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.7'
 services:
   node1:
     container_name: node1
-    image: bitcoinsv/bitcoin-sv:1.0.8.beta
+    image: bitcoinsv/bitcoin-sv:1.0.13
     ports:
       - "18332:18332"
       - "18333:18333"
@@ -19,7 +19,7 @@ services:
 
   node2:
     container_name: node2
-    image: bitcoinsv/bitcoin-sv:1.0.8.beta
+    image: bitcoinsv/bitcoin-sv:1.0.13
     ports:
       - "18501:18333"
       - "18502:18332"
@@ -34,7 +34,7 @@ services:
     
   node3:
     container_name: node3
-    image: bitcoinsv/bitcoin-sv:1.0.8.beta
+    image: bitcoinsv/bitcoin-sv:1.0.13
     ports:
       - "18601:18333"
       - "18602:18332"
