--- a/config/bitcoin.conf
+++ b/config/bitcoin.conf
@@ -107,12 +107,18 @@ zmqpubhashblock=tcp://*:28332
 
 #Enable publish hash transaction in <address>
 zmqpubhashtx=tcp://*:28332
+zmqpubhashtx2=tcp://*:28332
 
 #Enable publish raw block in <address>
 zmqpubrawblock=tcp://*:28332
+zmqpubrawblock2=tcp://*:28332
 
 #Enable publish raw transaction in <address>
 zmqpubrawtx=tcp://*:28332
+
+invalidtxsink=ZMQ
+zmqpubinvalidtx=tcp://*:28332
+zmqpubdiscardedfrommempool=tcp://*:28332
 
 #Do not accept transactions if number of in-mempool ancestors is <n> or more (default: 1000)
 #limitancestorcount=<n>
@@ -136,3 +142,4 @@ zmqpubrawtx=tcp://*:28332
 genesisactivationheight=1
 
 minminingtxfee=0.0000005
+whitelist=172.20.0.1/32
