--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       - "18332:18332"
       - "18333:18333"
       - "28332:28332"
-    expose: 
+    expose:
       - "18332"
       - "18333"
       - "28332"
@@ -16,14 +16,15 @@ services:
     volumes:
       - ./config/bitcoin.conf:/data/bitcoin.conf
       - node1-data:/data
+    command: [ "/entrypoint.sh", "bitcoind", "-connect=node2:18333", "-connect=node3:18333" ]
 
   node2:
     container_name: node2
     image: bitcoinsv/bitcoin-sv:1.0.13
     ports:
-      - "18501:18333"
-      - "18502:18332"
-    expose: 
+      - "48333:18333"
+      - "48332:18332"
+    expose:
       - "18332"
       - "18333"
     healthcheck:
@@ -31,14 +32,15 @@ services:
     volumes:
       - ./config/bitcoin.conf:/data/bitcoin.conf
       - node2-data:/data
-    
+    command: [ "/entrypoint.sh", "bitcoind", "-connect=node1:18333", "-connect=node3:18333" ]
+
   node3:
     container_name: node3
     image: bitcoinsv/bitcoin-sv:1.0.13
     ports:
-      - "18601:18333"
-      - "18602:18332"
-    expose: 
+      - "58333:18333"
+      - "58332:18332"
+    expose:
       - "18332"
       - "18333"
     healthcheck:
@@ -46,6 +48,7 @@ services:
     volumes:
       - ./config/bitcoin.conf:/data/bitcoin.conf
       - node3-data:/data
+    command: [ "/entrypoint.sh", "bitcoind", "-connect=node1:18333", "-connect=node2:18333" ]
 
 volumes:
   node1-data:
